Here's the commented version of the code snippet:

```c++
// Copyright 2019 gRPC authors.

// Header guard to prevent multiple inclusions of this header file
#ifndef GRPCPP_SECURITY_ALTS_UTIL_H
#define GRPCPP_SECURITY_ALTS_UTIL_H

// Include necessary headers
#include <grpc/grpc_security_constants.h>  // For gRPC security constants
#include <grpcpp/security/alts_context.h>  // For ALTS context definitions
#include <grpcpp/security/auth_context.h>  // For authentication context
#include <grpcpp/support/status.h>         // For gRPC status definitions

#include <memory>  // For std::unique_ptr and std::shared_ptr

// Forward declaration of C struct for ALTS context
struct grpc_gcp_AltsContext;

// gRPC namespace
namespace grpc {
// Experimental namespace for features that are not yet stable
namespace experimental {

/**
 * @brief Extracts ALTS context from an authentication context.
 * 
 * @param auth_context Shared pointer to constant authentication context
 * @return std::unique_ptr<AltsContext> Unique pointer to the extracted ALTS context
 */
std::unique_ptr<AltsContext> GetAltsContextFromAuthContext(
    const std::shared_ptr<const AuthContext>& auth_context);

/**
 * @brief Performs client authorization check using ALTS.
 * 
 * Verifies if the peer's service account is in the list of expected accounts.
 * 
 * @param auth_context Shared pointer to constant authentication context
 * @param expected_service_accounts List of authorized service accounts
 * @return grpc::Status OK if authorized, appropriate error status otherwise
 */
grpc::Status AltsClientAuthzCheck(
    const std::shared_ptr<const AuthContext>& auth_context,
    const std::vector<std::string>& expected_service_accounts);

}  // namespace experimental
}  // namespace grpc

#endif  // GRPCPP_SECURITY_ALTS_UTIL_H
```

The comments added include:
1. Explanation of the header guard
2. Purpose of each included header
3. Documentation for the forward declaration
4. Namespace explanations
5. Detailed function documentation including:
   - Purpose of each function
   - Parameter descriptions
   - Return value explanations
6. Clear indication of the experimental nature of these APIs

The comments follow standard documentation practices and provide clear explanations that would help future developers understand and maintain this code.